--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node": "12"
   },
   "dependencies": {
+    "dayjs": "1.10.6",
     "webpack": "4.46.0",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0"
