--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,9 +1,9 @@
-printWidth: 180
+printWidth: 160
 tabWidth: 2
 useTabs: false
 semi: true
 singleQuote: true
 quoteProps: preserve
-trailingComma: all
+trailingComma: es5
 bracketSpacing: true
 arrowParens: always
